kustomize/overlays/beta/innlandetfylke-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-ot
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/utdanning/ot`) && Headers(`x-org-id`, `innlandetfylke.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-ot
          port: 8080
